add alternating section

--- a/index.html
+++ b/index.html
@@ -47,6 +47,21 @@
     <button class="peach-btn">OUR WORK</button>
   </section>
 
+  <section class="alternating-boxes">
+    <div class="row left-box center-text">
+      <div><h1 class="orange-font">SECTION TITLE</h1><p class="off-white-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque blandit quam at nibh.</p><button class="peach-btn">LEARN MORE</button></div>
+    </div>
+    <div class="row right-box center-text">
+      <div><h1 class="orange-font">SECTION TITLE</h1><p class="off-white-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque blandit quam at nibh.</p><button class="peach-btn">LEARN MORE</button></div>
+    </div>
+    <div class="row left-box center-text">
+      <div><h1 class="orange-font">SECTION TITLE</h1><p class="off-white-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque blandit quam at nibh.</p><button class="peach-btn">LEARN MORE</button></div>
+    </div>
+    <div class="row right-box center-text">
+      <div><h1 class="orange-font">SECTION TITLE</h1><p class="off-white-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque blandit quam at nibh.</p><button class="peach-btn">LEARN MORE</button></div>
+    </div>
+  </section>
+
   <section class="big-wave"></section>
   <section id="team" class="navy center-text">
     <h1 class="orange-font">THE TEAM</h1>
